force-app/main/default/objects/Place__c/Place__c.object-meta.xml
<CustomObject>
    <description>A Mirador "Lloc": a group of Spaces (e.g. a building or site). Root of the space plan hierarchy.</description>
    <label>Place</label>
    <nameField>
        <label>Place Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Places</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>