force-app/main/default/objects/Place__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether the Place (and its Spaces) show up in the live home/space views. Defaults to true; inactive places and anything under them are hidden from those views.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>