force-app/main/default/objects/Place__c/fields/ActivePlaceId__c.field-meta.xml
<CustomField>
    <fullName>ActivePlaceId__c</fullName>
    <description>Client-side id of the currently active Place (SpacePlanData.activePlaceId). Stored as the app's own string id (e.g. "place_xxx"), not a Salesforce record id. Validated against places[].id on load. Null/blank when no place is active.</description>
    <label>Active Place Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>