force-app/main/default/objects/Place__c/fields/ActiveSpaceId__c.field-meta.xml
<CustomField>
    <fullName>ActiveSpaceId__c</fullName>
    <description>Client-side id of the currently active Space within this Place (SpacePlanData.activePlaceId resolves the active space). Stored as the app's own string id, not a Salesforce record id. Null/blank if the place has no spaces yet.</description>
    <label>Active Space Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>